force-app/main/default/objects/Shipment__c/fields/Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_ID__c</fullName>
    <label>Item ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>