force-app/main/default/objects/Shipment__c/fields/Oracle_Shipment_Ext_Key__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Shipment_Ext_Key__c</fullName>
    <description>Composite key. Cust ID + Shipment ID</description>
    <externalId>true</externalId>
    <label>Oracle Shipment Ext Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>