force-app/main/default/objects/Shipment__c/fields/Oracle_Shipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Shipment_ID__c</fullName>
    <externalId>true</externalId>
    <label>Oracle Shipment ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>