force-app/main/default/objects/Shipment__c/fields/Oracle_Shipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Shipment_Number__c</fullName>
    <description>Oracle order ID</description>
    <label>Oracle Order ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>