force-app/main/default/objects/Shipment__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price of shipment.</description>
    <label>Unit Price</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>