force-app/main/default/objects/Shipment__c/fields/Product_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Product_Shipped__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product shipped.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>R00N50000001ICVkEAO</relationshipName>
    <type>Lookup</type>
</CustomField>