force-app/main/default/objects/Shipment__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantify shipped.</description>
    <label>Requested Qty</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>