force-app/main/default/objects/Shipment__c/fields/Scheduled_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Ship_Date__c</fullName>
    <label>Scheduled Ship Date</label>
    <type>Date</type>
</CustomField>