force-app/main/default/objects/Shipment__c/fields/Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Date__c</fullName>
    <description>Date shipped</description>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>