force-app/main/default/objects/Shipment__c/fields/Total_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipment__c</fullName>
    <formula>Quantity__c  *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Shipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>