force-app/main/default/objects/Shipment__c/recordTypes/Shipment.recordType-meta.xml
<RecordType>
    <fullName>Shipment</fullName>
    <active>true</active>
    <label>Shipment</label>
</RecordType>