force-app/main/default/objects/Shipment__c/listViews/AllShipments.listView-meta.xml
<ListView>
    <fullName>AllShipments</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Item_ID__c</columns>
    <columns>Item_Description__c</columns>
    <columns>Oracle_Shipment_Number__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Product_Shipped__c</columns>
    <columns>Quantity__c</columns>
    <columns>Shipment_Date__c</columns>
    <columns>Scheduled_Ship_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Shipments</label>
</ListView>